--- a/public/test.html
+++ b/public/test.html
@@ -70,8 +70,8 @@ const attributeLabels = {
   Region: "地区",
   Platform: "平台类型",
   Company: "公司",
-  Status: "状态",
-  ConsolePlatform: "主机类型"
+  ConsolePlatform: "主机类型",
+  Contributor: "贡献者"
 };
 
 function openAddEventForm() {
